--- a/index.html
+++ b/index.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Видео</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    video {
-      max-width: 100%;
-      max-height: 100%;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Привет от Каната</title>
 </head>
-<body>
-  <video
-    autoplay
-    playsinline
-    controls
-    preload="auto"
-  >
-    <source src="video.mp4" type="video/mp4"
+<body style="margin:0;display:flex;align-items:center;justify-content:center;height:100vh;background:#000;">
+  <video width="100%" autoplay controls playsinline>
+    <source src="video.mp4" type="video/mp4">
+    Ваш браузер не поддерживает видео.
+  </video>
+</body>
+</html>
