--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Привет от Каната</title>
+  <title>Канат Жаппаров</title>
 </head>
 <body style="margin:0;display:flex;align-items:center;justify-content:center;height:100vh;background:#000;">
-  <video width="100%" autoplay controls playsinline>
+  <video width="100%" controls autoplay playsinline>
     <source src="video.mp4" type="video/mp4">
     Ваш браузер не поддерживает видео.
   </video>
